[package]
name = "blog-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = "1.19.2"
dotenv = "0.15.0"
serde = "1.0.137"

[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["async-std-runtime"]
